# 2dmc-renewed

./: .gitignore  README.md  pyproject.toml
res/data/blocks/: names.json
src/: constants.py  exe.py  utils.py
src/core/: assets.py  block.py  chunk.py  game.py  render_layer.py  scene.py  sprite.py  sprite_manager.py
src/core/world/: block.py  block_manager.py  chunk.py  chunk_manager.py
src/scenes/: main_game.py  main_scene.py
src/sprites/: block.py  camera.py  chunk_view.py  crosshair.py  debug_menu.py  visual_debug.py
src/sprites/debug/: debug_manager.py  visual_debug.py
src/util/: __init__.py  deferred_dict.py  enum_dict.py  general.py  profiler.py  timer.py  typing.py  vector.py
