[tool.poetry]
package-mode = false
name = "2dmc-renewed"
version = "0.1.0"
description = "Full rewrite of 2DMC."
authors = ["DaNubCoding <danubcoding@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame-ce = {version = "^2.5.2.dev2", allow-prereleases = true}
multimethod = "^1.12"
bidict = "^0.23.1"
perlin-noise = "^1.13"
snakeviz = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
